tests/baselines/reference/internalAliasInterface.errors.txt
internalAliasInterface.ts(1,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
internalAliasInterface.ts(6,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.


==== internalAliasInterface.ts (2 errors) ====
    module a {
           ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        export interface I {
        }
    }
    
    module c {
           ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        import b = a.I;
        export var x: b;
    }
    